add increase score

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <header class="header">
         <h1 class="logo"><a href="/">2048</a></h1>
         <div>
-          <div class="score"><span>Счет</span><span>0</span></div>
+          <div class="score" id="score"><span>Счет</span><span>0</span></div>
           <div class="score"><span>Лучший</span><span>15734</span></div>
         </div>
       </header>
