--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/main.css" />
     <title>Game 2048</title>
   </head>
@@ -18,7 +15,7 @@
       <header class="header">
         <h1 class="logo"><a href="/">2048</a></h1>
         <div>
-          <div class="score" id="score"><span>Счет</span><span>0</span></div>
+          <div class="score"><span>Счет</span><span>0</span></div>
           <div class="score"><span>Лучший</span><span>15734</span></div>
         </div>
       </header>
