--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/main.css?v=1" />
     <title>Game 2048</title>
   </head>
   <body>
@@ -29,6 +29,6 @@
         одинаковым номером соприкасаются, они сливаются в одну!
       </p>
     </div>
-    <script src="assets/js/app.js"></script>
+    <script src="assets/js/app.js?v=1"></script>
   </body>
 </html>
