add modal in game over

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/main.css?v=2" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="assets/css/main.css?v=3" />
     <title>Game 2048</title>
   </head>
   <body>
@@ -21,14 +24,20 @@
       </header>
       <div class="sub-header">
         <p class="logo-desc">Соедините числа и доберитесь до плитки 2048!</p>
-        <button id="newGame">Новая игра</button>
-      </div>      
+        <button class="newGame">Новая игра</button>
+      </div>
       <div id="game"></div>
       <p class="learn">
         КАК ИГРАТЬ: Используйте клавиши со стрелками для перемещения плитки. Когда две плитки с
         одинаковым номером соприкасаются, они сливаются в одну!
       </p>
     </div>
-    <script src="assets/js/app.js?v=2"></script>
+    <div id="gameOver" class="modal">
+      <div class="modalBody">
+        <p class="modalTitle">Игра закончена!</p>
+        <div><button class="newGame">Попробуйте еще раз</button></div>
+      </div>
+    </div>
+    <script src="assets/js/app.js?v=3"></script>
   </body>
 </html>
